<resources>
    <string name="app_name">GeoPhysics Lab</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GeoPhysicsLab</string>
    <string name="nav_header_subtitle">erald.guri@yahoo.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="core_logging">Core Logging</string>

    <string name="menu_earthquakes">Earthquakes</string>
    <string name="magnitude">Magnitude</string>
    <string name="over3_magnitude">3+</string>
    <string name="over4_magnitude">4+</string>
    <string name="over5_magnitude">5+</string>
    <string name="strong_magnitude">strong</string>
    <string name="export">Export</string>
    <string name="csv_export">CSV</string>
    <string name="pdf_export">PDF</string>
    <string name="all_magnitude">All</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="csv_created">CSV created successfully</string>
    <string name="csv_exists">CSV exists</string>
    <string name="failed_to_export">Failed To export file</string>
    <string name="psn">PSN</string>
    <string name="pin">PIN</string>
    <string name="bin">BIN</string>
    <string name="project_name">Project Name</string>
    <string name="surface_elevation">Surface Elevation</string>
    <string name="date_evaluated">Date Evaluated</string>
    <string name="evaluator_s">Evaluator(s)</string>
    <string name="top_of_rock">Top Of Rock</string>
    <string name="depth">Depth</string>
    <string name="top_of_sound_rock">Top Of Sound Rock</string>
    <string name="comments">Comments</string>
    <string name="depth_from">Depth from</string>
    <string name="to">To</string>
    <string name="number_of_runs">Number Of runs</string>
    <string name="core_size">Core size</string>
    <string name="waypoint">Waypoint</string>
    <string name="major_thick">Major Thick</string>
    <string name="minor_rock">Minor Rock</string>
    <string name="minor_thick">Minor Thick</string>
    <string name="major_minor">Major:Minor</string>
    <string name="weather">Weather</string>
    <string name="sedimentary_structure">Sedimentary structure</string>
    <string name="fault_type">Fault type</string>
    <string name="dip_direction_dip_angle">DIP direction/DIP angle</string>
    <string name="compass">Compass</string>
    <string name="ok">OK</string>
    <string name="faultdescription">FaultDescription</string>
    <string name="fold_type">Fold Type</string>
    <string name="l_limb_atrributes">L limb Atrributes</string>

    <string name="compass_not_supported">Your device doesn\'t support compass</string>
    <string name="boring_id">Boring Id</string>
    <string name="size_range_of_pieces">Size range of pieces</string>
    <string name="hardness">Hardness</string>
    <string name="weathering">Weathering</string>
    <string name="additional_comments">Additional Comments</string>
</resources>